chore: add VST3 SDK

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -21,3 +21,6 @@ APPLY_FIXES: all
 SHOW_ELAPSED_TIME: true
 # Uncomment if you want MegaLinter to detect errors but not block CI to pass
 # DISABLE_ERRORS: true
+
+ADDITIONAL_EXCLUDED_DIRECTORIES:
+  - vst3sdk
