chore: update MegaLinter config

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -12,7 +12,28 @@ APPLY_FIXES: all
 
 # If you use ENABLE_LINTERS variable, all other linters will be disabled by
 # default
-# ENABLE_LINTERS:
+ENABLE_LINTERS:
+  - ACTION_ACTIONLINT
+  - COPYPASTE_JSCPD
+  - CPP_CLANG_FORMAT
+  - CPP_CPPCHECK
+  - CPP_CPPLINT
+  - EDITORCONFIG_EDITORCONFIG_CHECKER
+  - JSON_JSONLINT
+  - JSON_PRETTIER
+  - JSON_V8R
+  - REPOSITORY_GITLEAKS
+  - REPOSITORY_GIT_DIFF
+  - REPOSITORY_GRYPE
+  - REPOSITORY_SECRETLINT
+  - REPOSITORY_SYFT
+  - REPOSITORY_TRIVY
+  - REPOSITORY_TRIVY_SBOM
+  - REPOSITORY_TRUFFLEHOG
+  - SPELL_LYCHEE
+  - YAML_PRETTIER
+  - YAML_V8R
+  - YAML_YAMLLINT
 
 # DISABLE:
 # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
@@ -24,3 +45,5 @@ SHOW_ELAPSED_TIME: true
 
 ADDITIONAL_EXCLUDED_DIRECTORIES:
   - vst3sdk
+
+CPP_CPPCHECK_ARGUMENTS: --language=c++ --check-level=exhaustive
