--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,6 @@ indent_style = space
 insert_final_newline = true
 tab_width = 2
 trim_trailing_whitespace = true
+
+[.gitmodules]
+indent_style = tab
