chore: disable readability/casting CPPLINT filter

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,4 +1,3 @@
 set noparent
 
-filter=-whitespace/indent,-build/include_order,-runtime/explicit,-whitespace/comments,-build/include_what_you_use,-readability/braces,-readability/todo,-build/namespaces,-runtime/int,-whitespace/blank_line,-build/include_subdir,-whitespace/empty_if_body
-exclude_files=libs/
+filter=-whitespace/indent,-build/include_order,-runtime/explicit,-whitespace/comments,-build/include_what_you_use,-readability/braces,-readability/todo,-build/namespaces,-runtime/int,-whitespace/blank_line,-build/include_subdir,-whitespace/empty_if_body,-readability/casting
