--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,3 +1,3 @@
 set noparent
 
-filter=-whitespace/indent,-build/include_order,-runtime/explicit,-whitespace/comments,-build/include_what_you_use,-readability/braces,-readability/todo,-build/namespaces,-runtime/int,-whitespace/blank_line,-build/include_subdir,-whitespace/empty_if_body,-readability/casting
+filter=-whitespace/indent,-build/include_order,-runtime/explicit,-whitespace/comments,-build/include_what_you_use,-readability/braces,-readability/todo,-build/namespaces,-runtime/int,-whitespace/blank_line,-build/include_subdir,-whitespace/empty_if_body,-readability/casting,-whitespace/braces,-whitespace/newline
