chore: add toml11 single header library
source:
https://raw.githubusercontent.com/ToruNiina/toml11/refs/tags/v4.4.0/single_include/toml.hpp

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -36,5 +36,6 @@ SHOW_ELAPSED_TIME: true
 
 ADDITIONAL_EXCLUDED_DIRECTORIES:
   - vst3sdk
+  - toml11
 
 CPP_CPPCHECK_ARGUMENTS: --language=c++ --check-level=exhaustive
