--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ add_subdirectory(${SDK_ROOT}/public.sdk)
 smtg_setup_platform_toolset()
 smtg_setup_symbol_visibility()
 
+include(SMTG_FindJack)
+
 set(min_vst_host_sources
   ${SDK_ROOT}/public.sdk/source/vst/hosting/plugprovider.cpp
   ${SDK_ROOT}/public.sdk/source/vst/hosting/plugprovider.h
@@ -24,6 +26,11 @@ set(min_vst_host_sources
   source/platform/iplatform.h
   source/platform/iwindow.h
   source/usediids.cpp
+  source/media/audioclient.cpp
+  source/media/audioclient.h
+  source/media/imediaserver.h
+  source/media/iparameterclient.h
+  source/media/jack/jackclient.cpp
 )
 
 if(SMTG_LINUX)
@@ -54,6 +61,9 @@ target_link_libraries(min-vst-host
   PRIVATE
     sdk_hosting
     ${min_vst_host_PLATFORM_LIBS}
+    ${LIBJACK_LIBRARY}
 )
 
-target_include_directories(min-vst-host PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(min-vst-host PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${LIBJACK_INCLUDE_DIR})
