--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,11 @@ repos:
     rev: v3.3.0
     hooks:
       - id: editorconfig-checker
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v20.1.8
+    hooks:
+      - id: clang-format
+        exclude: |
+          (?x)^(
+            source/toml11/toml.hpp
+          )$
