--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,10 @@ repos:
     rev: v3.3.0
     hooks:
       - id: editorconfig-checker
+        exclude: |
+          (?x)^(
+            source/toml11/toml.hpp
+          )$
   - repo: https://github.com/pre-commit/mirrors-clang-format
     rev: v20.1.8
     hooks:
