chore: add doctest

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,5 +21,6 @@ repos:
       - id: clang-format
         exclude: |
           (?x)^(
-            source/toml11/toml.hpp
+            source/toml11/toml.hpp|
+            source/doctest/doctest.h
           )$
