--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,12 @@
 repos:
+  - repo: local
+    hooks:
+      - id: nixpkgs-fmt
+        name: nixpkgs-fmt
+        description: Format nix code with nixpkgs-fmt.
+        entry: nixpkgs-fmt
+        language: system
+        files: \.nix$
   - repo: https://github.com/rhysd/actionlint
     rev: v1.7.7
     hooks:
